# Yandex-Red

./: CMakeLists.txt
0_LEET_CODE/: CMakeLists.txt  recursion1.cpp
ALGORITHM_COMPLEXITY/: algorithm_complexity.cpp  lower_upper_bound_test.cpp
BFS/: CMakeLists.txt  README.md  bfs0.cpp  bfs1.cpp  bfs1_1.cpp  bfs2.cpp  bfs3.cpp  bfs4_with_pointers.cpp  bfs5_rewrite_0_with_shared_ptr.cpp
CODE_OPTIMISATION/: CMakeLists.txt  write_random_to_file.cpp
EFFECTIVE_CONTAINER_USAGE/: CMakeLists.txt  StringSet.cpp  iterator_invalidation.cpp  list_tries.cpp
MEMORY_MODEL/: CMakeLists.txt  exprs_with_pointers.cpp  memory_model.cpp  pointers_simple.cpp  simple_vector.cpp
OUT_STREAM_BUFFERISATION/: CMakeLists.txt  profiler.h
W1_CLASS_TEMPLATES/: CMakeLists.txt  class_templates1.cpp
W1_DEFS/: header1.h
W1_MACROSES/: dark_macroses_side.cpp  rational.cpp  rational.h
W2_CODE_OPTIMISATION/: code_optimisation.cpp  progr1.cpp
W2_OUT_STREAM_BUFFERISATION/: out_stream_bufferisation.cpp  stream_coupling.cpp
W3_ALGORITHM_COMPLEXITY/: CMakeLists.txt  amortized_complexity.cpp
W3_MEMORY_MODEL/: exprs_with_const_pointers.cpp  use_delete.cpp
W4_EFFECTIVE_CONTAINER_USAGE/: array_exprs.cpp  effective_container_usage.cpp  iterator_invalidation.cpp  split_string.cpp  vector_to_deque.cpp
W5_1_MOVING_OBJECTS/: CMakeLists.txt  Person.cpp  VectorStream.cpp  copy_ctor.cpp  move_constructor.cpp  move_function.cpp  move_with_array.cpp  moving_objects.cpp  testing_copy.cpp  tricky_return.cpp
W5_1_MOVING_OBJECTS_2/: CMakeLists.txt  l_r_value.cpp  references_and_pointer.cpp  un_ptr_vect_delete.cpp  unique_ptr_from_func.cpp
W5_2_BASIC_MULTYTHREADING/: BancAccount.cpp  CMakeLists.txt  basic_multythreading.cpp  generate_sum_matrix.cpp  sum_matrix_2.cpp
simp_proj_1/: CMakeLists.txt  simp_proj_1.cpp
w1_macroses/: CMakeLists.txt  macro_intro.cpp  test_runner.h
yandex_algorithms/: CMakeLists.txt  check_anagramm.cpp  yandex_algorithms.cpp
