project(BFS)

add_executable(BFS0 bfs0.cpp)
add_executable(BFS1_1 bfs1_1.cpp)
add_executable(BFS1 bfs1.cpp)
add_executable(BFS2 bfs2.cpp)
add_executable(BFS3 bfs3.cpp)
add_executable(BFS4_with_pointers bfs4_with_pointers.cpp)
add_executable(bfs5_rewrite_0_with_shared_ptr bfs5_rewrite_0_with_shared_ptr.cpp)
