project(simp_proj)

add_executable(memory_model
        memory_model.cpp)
add_executable(pointers_simple
        pointers_simple.cpp)
add_executable(use_delete
        use_delete.cpp)
add_executable(simple_vector simple_vector.cpp)
add_executable(exprs_with_pointers exprs_with_pointers.cpp)
add_executable(exprs_with_const_pointers exprs_with_const_pointers.cpp)
